@startuml
'https://plantuml.com/class-diagram

class Solution44 {
}

class JsonInput {
    + path : String

    <<constructor>> JsonInput(path : String)

    + readFile() : void
    + readJsonStream(in : InputStream) : List<Object>
    + readProductArray(reader : JsonReader) : List<Object>
    + readObject(reader : JsonReader) : Object

}

class Object {
    + name : String
    + price : double
    + quantity : int

    <<constructor>> Object (name : String, price : double, quantity : int)
}

Solution44 o--> JsonInput
JsonInput o--> Object

@enduml